# AzurenderPlus

./: README.md
report/: report.tex
resources/: Performance
resources/scenes/: dragon_only.scene  dragon_only_pack.scene  dragon_shadow.scene  lucy_all.scene  lucy_all_2m4p.scene  lucy_all_2m4p18lucy.scene  lucy_all_2m4p18lucy_over.scene  lucy_all_2m4p36lucy.scene  lucy_all_3m6p_9lucy.scene  lucy_all_9m9p108lucy.scene  lucy_all_9m9p18lucy.scene  lucy_all_9m9p36lucy.scene  lucy_all_9m9p54lucy.scene  lucy_all_9m9p9lucy.scene  lucy_all_9m9p_9lucy.scene  lucy_one.scene  lucy_only.scene
src/: CMakeLists.txt
src/application/: scene_loader.cpp
src/math/: CMakeLists.txt  color.cpp  matrix.hpp
src/raytracer/: CMakeLists.txt  MPICommunicate.cpp  MPICommunicate.hpp  RaytracerApplication.cpp  RaytracerApplication.hpp  Utils.h  azMPI.cpp  azMPI.hpp  azMPIRaytrace.cpp  azMPIRaytrace.hpp  azReflection.hpp  main.cpp  master.cpp  master.hpp  montecarlo.hpp  ray_list.cpp  ray_list.hpp  ray_map.hpp  raytracer.cpp  raytracer.hpp
src/scene/: BndBox.hpp  CMakeLists.txt  azBVHTree.cpp  azBVHTree.hpp  azLights.cpp  azLights.hpp  mesh.cpp  model.cpp  model.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/utils/: CMakeLists.txt
